Wireframe mode hair is displayed behind meshes. #61928

Closed
opened 2019-02-25 09:59:17 +01:00 by William Reynish · 5 comments

System Information
Operating system: macOS 10.14.3
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: 2.80, blender2.8, 2019-02-25

Short description of error
In Wireframe mode, hair particles are displayed behind meshes.

Exact steps for others to reproduce the error
The issue should be immediately visible in the .blend file below:
hair_depth_bug.blend

Screenshot 2019-02-25 at 09.57.12.png

**System Information** Operating system: macOS 10.14.3 Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: 2.80, blender2.8, 2019-02-25 **Short description of error** In Wireframe mode, hair particles are displayed behind meshes. **Exact steps for others to reproduce the error** The issue should be immediately visible in the .blend file below: [hair_depth_bug.blend](https://archive.blender.org/developer/F6710502/hair_depth_bug.blend) ![Screenshot 2019-02-25 at 09.57.12.png](https://archive.blender.org/developer/F6710508/Screenshot_2019-02-25_at_09.57.12.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
William Reynish changed title from WorkbenchHair depth ordering wrong to Wireframe mode hair depth ordering wrong 2019-02-25 10:02:20 +01:00
William Reynish changed title from Wireframe mode hair depth ordering wrong to Wireframe mode hair is displayed behind meshes. 2019-02-25 10:03:04 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

It is not the wireframe of the hairs, it is the outline of the hairs and since they are with the plane the same object, you don't have outlines between the plane and the hairs. So this is expected behavior.

But looking at this makes me think we should display the hairs in wireframe mode using the wireframe overlay drawing.

It is not the wireframe of the hairs, it is the outline of the hairs and since they are with the plane the same object, you don't have outlines between the plane and the hairs. So this is expected behavior. But looking at this makes me think we should display the hairs in wireframe mode using the wireframe overlay drawing.

This issue was referenced by af3a55bb1b

This issue was referenced by af3a55bb1b7d11c3036839d66fcf4280f1dae96b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-05-20 22:54:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61928
No description provided.