Overlay: Wireframe: Add visualization for Hairs in wireframe mode

This only works for particle systems for now.

Fix T61928 Wireframe mode hair not visible